--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "engin.ma_front",
+  "name": "Engin.ma",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.511.0",
     "next": "15.1.8",
+    "next-intl": "^4.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
+    "react-leaflet": "^5.0.0",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@types/leaflet": "^1.9.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.8",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
