--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "export": "next export",
+    "build:export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
