--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     restart: always
     networks:
       - proxy
+    environment:
+      NEXT_PUBLIC_API_BASE_URL: "https://api.enginchantier.ma"
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
