--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,11 @@ version: '3.8'
 
 services:
   frontend:
-    build: .
+    build:
+    context: .
+    dockerfile: Dockerfile
+    args:
+      NEXT_DISABLE_ESLINT: "true" # Disable ESLint during build
     container_name: frontend
     restart: always
     networks:
