--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@tanstack/react-query": "^5.59.15",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
@@ -20,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-leaflet": "^5.0.0",
+    "sonner": "^1.5.0",
     "zod": "^3.25.28"
   },
   "devDependencies": {
