--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-slider": "^1.3.6",
     "@tanstack/react-query": "^5.59.15",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
@@ -22,6 +25,8 @@
     "react-hook-form": "^7.56.4",
     "react-leaflet": "^5.0.0",
     "sonner": "^1.5.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.28"
   },
   "devDependencies": {
